--- a/DynamicForm/Views/Forms/_EditForm.cshtml
+++ b/DynamicForm/Views/Forms/_EditForm.cshtml
@@ -42,6 +42,56 @@
                         </span>
                         @*<span asp-validation-for="Ordinal" class="text-danger"></span>*@
                     </div>
+                    <div class="form-group">
+                        <label class="required" for="FormOrdinal">Status</label>
+                        <div class="form-group">
+                            <label class="checkbox-inline">
+                                @if (Model.Status == 1)
+                                {
+                                    <input id="radio-switch-pending" class="form-check-input" type="radio" asp-for="Status" value="1" checked>
+                                }
+                                else
+                                {
+                                    <input id="radio-switch-pending" class="form-check-input" type="radio" asp-for="Status" value="1">
+                                }
+                                <label class="form-check-label" for="radio-switch-pending">Pending</label>
+                            </label>
+                            <label class="checkbox-inline">
+                                @if (Model.Status == 2)
+                                {
+                                    <input id="radio-switch-published" class="form-check-input" type="radio" asp-for="Status" value="2" checked>
+                                }
+                                else
+                                {
+                                    <input id="radio-switch-published" class="form-check-input" type="radio" asp-for="Status" value="2">
+                                }
+                                <label class="form-check-label" for="radio-switch-published">Published</label>
+                            </label>
+                            <label class="checkbox-inline">
+                                @if (Model.Status == 3)
+                                {
+                                    <input id="radio-switch-unpublished" class="form-check-input" type="radio" asp-for="Status" value="3" checked>
+                                }
+                                else
+                                {
+                                    <input id="radio-switch-unpublished" class="form-check-input" type="radio" asp-for="Status" value="3">
+                                }
+                                <label class="form-check-label" for="radio-switch-unpublished">Unpublished</label>
+                            </label>
+                            <label class="checkbox-inline">
+                                @if (Model.Status == 4)
+                                {
+                                    <input id="radio-switch-deleted" class="form-check-input" type="radio" asp-for="Status" value="4" checked>
+                                }
+                                else
+                                {
+                                    <input id="radio-switch-deleted" class="form-check-input" type="radio" asp-for="Status" value="4" > 
+                                }
+                                <label class="form-check-label" for="radio-switch-deleted">Deleted</label>
+                            </label>
+                        </div>
+                    </div>
+
                     <input type="hidden" asp-for="Id" name="Id" />
                 </div>
                 <div class="modal-footer">
