--- a/DynamicForm/Views/Forms/Index.cshtml
+++ b/DynamicForm/Views/Forms/Index.cshtml
@@ -216,7 +216,7 @@
                                 return "<span class='label label-danger'>Deleted</span>";
                             }
                             else {
-                                return "<span class='label label-danger'>N/A</span>";
+                                return "<span class='label label-danger'>NA</span>";
                             }
                         }
                     },
