--- a/DynamicForm/Views/DynamicForm/Index.cshtml
+++ b/DynamicForm/Views/DynamicForm/Index.cshtml
@@ -12,63 +12,108 @@
 
         <h2 class="modal-header bg-warning">@ViewBag.TemplateName</h2>
     </div>
-    <div class="modal-body">
-        @if (Model.Count() > 0)
-        {
-
-            @foreach (var item in Model)
+    <form name="userform" asp-controller="DynamicForm" asp-action="SaveFormValues" method="post"
+          data-ajax="true" data-ajax-method="post" data-ajax-complete="completedsaveform" enctype="multipart/form-data" autocomplete="off">
+        <div class="modal-body">
+            @if (Model.Count() > 0)
             {
-                <div class="row">
-                    <div class="col-md-12 col-sm-12 col-xs-12">
+                @Html.Hidden("TemplateFormId", (object)ViewBag.TemplateFormId)
+                @foreach (var item in Model)
+                {
+                    <div class="row">
+                        <div class="col-md-12 col-sm-12 col-xs-12">
 
-                        <div class="x_content">
-                            @if (item.ControlName == "TextBox")
-                            {
-                                <div class="col-span-12 sm:col-span-6">
-                                    <label for="nameinput" class="form-label">@item.Name</label>
-                                    <input id="nameinput" type="text" class="form-control" style="width:40%">
-                                </div>
-                            }
-                            else if (item.ControlName == "TextArea")
-                            {
-                                <div class="col-span-12 sm:col-span-6">
-                                    <label for="textareainput" class="form-label">@item.Name</label>
-                                    <textarea id="textareainput" class="form-control" rows="2" style="width:40%"></textarea>
-                                </div>
-                            }
-                            else if (item.ControlName == "Select")
-                            {
-                                <div class="col-span-12 sm:col-span-12">
-                                    <label for="selection" class="form-label">@item.Name</label>
-                                    @*<select class="form-control" asp-items="@ViewBag.Options" id="selection" >
-                        </select>*@
-                                </div>
+                            <div class="x_content">
+                                @if (item.ControlName == "TextBox")
+                                {
+                                    <div class="col-span-12 sm:col-span-6">
+                                        <label for="nameinput" class="form-label">@item.Name</label>
+                                        <input name="@item.Name" id="nameinput" type="text" class="form-control" style="width:40%">                                       
+                                    </div>
+                                }
+                                else if (item.ControlName == "TextArea")
+                                {
+                                    <div class="col-span-12 sm:col-span-6">
+                                        <label for="textareainput" class="form-label">@item.Name</label>
+                                        <textarea name="@item.Name" id="textareainput" class="form-control" rows="2" style="width:40%"></textarea>
+                                    </div>
+                                }
+                                else if (item.ControlName == "Select")
+                                {
+                                    <div class="col-span-12 sm:col-span-12">
+                                        <label for="selection" class="form-label">@item.Name</label>
+                                        <select class="form-control" id="selection" style="width:40%">
+                                            <option selected>Telangana</option>
+                                            <option>AP</option>
+                                            <option>KA</option>
+                                        </select>
+                                    </div>
 
-                            }
-                            else if (item.ControlName == "CheckBox")
-                            {
-                                <div class="custom-control custom-checkbox col-span-6 sm:col-span-6">
-                                    <label for="textareainput" class="form-label">@item.Name</label>
-                                    <input type="checkbox" id="chkproperty">
-                                </div>
-                            }
-                            else if (item.ControlName == "FileUpload")
-                            {
-                                <div class="class=" col-span-12 sm:col-span-12"">
-                                    <label for="customFile" class="form-label">Select File</label>
-                                    <input type="file" class="custom-file-input" id="uploadfile" style="width:50%"><br />
-                                </div>
-                            }
+                                }
+                                else if (item.ControlName == "CheckBox")
+                                {
+                                    <div class="custom-control custom-checkbox col-span-6 sm:col-span-6">
+                                        <label for="textareainput" class="form-label">@item.Name</label>
+                                        <input name="@item.Name" type="checkbox" id="chkproperty" />
+                                    </div>
+                                }
+                                else if (item.ControlName == "FileUpload")
+                                {
+                                    <div class="class=" col-span-12 sm:col-span-12"">
+                                        <label for="customFile" class="form-label">Select File</label>
+                                        <input name="@item.Name" type="file" class="custom-file-input" id="uploadfile" style="width:50%"><br />
+                                    </div>
+                                }
+
+                            </div>
                         </div>
                     </div>
+
+                }
+                <br />
+                <div class="form-group">
+                    <button type="submit" id="btnSubmit" class="btn btn-primary w-20">Submit</button>
                 </div>
-
             }
-
-            <div>
-
-                <button type="submit" id="btnSubmit" class="btn btn-primary w-20">Submit</button>
-            </div>
-        }
-    </div>
+        </div>
+    </form>
 </div>
+
+@section scripts
+    {
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.unobtrusive-ajax.min.js"></script>
+    <script src="~/lib/sweetalert/js/sweetalert2.all.min.js"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+    <script type="text/javascript">
+    completedsaveform = function (xhr) {
+            var rtn = JSON.parse(xhr.responseText);
+            if (rtn.error == false) {
+                Swal.fire({
+                    title: 'User Form',
+                    text: 'Form detials submitted successfully',
+                    type: 'success',
+                    allowOutsideClick: false
+                }).then(function () {
+                    clearFormCreate();
+                });               
+                
+            }
+            else {
+                Swal.fire({
+                    icon: 'error',
+                    title: 'User Form',
+                    text: 'Oops!! Something Went Wrong!',
+                    type: 'error',
+                    allowOutsideClick: false
+                });
+            }
+        };
+
+          function clearFormCreate() {           
+            var frm = document.getElementsByName('userform')[0];
+            frm.reset();
+        }
+        </script>
+        }
