--- a/DynamicForm/Views/Fields/Index.cshtml
+++ b/DynamicForm/Views/Fields/Index.cshtml
@@ -5,11 +5,15 @@
 }
 <link href="~/lib/datatables/css/jquery.datatables.min.css" rel="stylesheet" />
 <link href="~/lib/sweetalert/css/sweetalert2.min.css" rel="stylesheet" />
-<script src="~/lib/datatables/js/responsive.bootstrap.min.js"></script>
+@*<script src="~/lib/datatables/js/responsive.bootstrap.min.js"></script>*@
 
 <style>
     .modal {
         background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    }
+
+    .error {
+        color: red;
     }
 </style>
 
@@ -42,7 +46,7 @@
             </div>
         </div>
 
-        <form name="createfield" asp-controller="Fields" asp-action="SaveField" method="post"
+        <form id="create-form" name="createfield" asp-controller="Fields" asp-action="SaveField" method="post" novalidate
               data-ajax="true" data-ajax-method="post" data-ajax-complete="completedField" enctype="multipart/form-data" autocomplete="off">
             <div class="modal fade" id="add-field-model" role="dialog" aria-hidden="true" data-backdrop="static" data-keyboard="false" tabindex="-1">
                 <div class="modal-dialog">
@@ -53,46 +57,40 @@
                             <button type="button" class="close" data-dismiss="modal" id="modelclose">&times;</button>
                         </div>
                         <div class="modal-body">
+
                             <div class="form-group">
                                 <label class="required" for="FieldName">Name</label>
                                 <input type="text" id="FieldName" class="form-control" asp-for="Name" />
-                                <span asp-validation-for="Name" class="text-danger"></span>
                             </div>
                             <div class="form-group">
-                                <label class="required" for="FieldDataType">Control Type</label>
+                                <label for="FieldDataType">Control Type</label>
                                 <select name="ControlId" class="form-control" asp-for="ControlId" asp-items="@ViewBag.ControlTypes"></select>
-                                <span asp-validation-for="ControlId" class="text-danger"></span>
                             </div>
                             <div class="form-group">
                                 <label class="required" for="DefaultValue">Default Value</label>
-                                <input type="text" id="FieldName" class="form-control" asp-for="DefaultValue" />
-                                <span asp-validation-for="DefaultValue" class="text-danger"></span>
+                                <input type="text" id="DefaultValue" class="form-control" name="DefaultValue" asp-for="DefaultValue" />
                             </div>
                             <div class="form-check">
                                 <input type="checkbox" class="form-check-input" asp-for="IsRequired" />
                                 <label class="form-check-label" for="IsRequired"> Required</label>
-                                <span asp-validation-for="IsRequired" class="text-danger"></span>
                             </div>
                             <div class="form-group">
                                 <label class="required" for="RequiredMessage">Required Message</label>
-                                <input type="text" class="form-control" asp-for="RequiredMessage" />
-                                <span asp-validation-for="RequiredMessage" class="text-danger"></span>
+                                <input type="text" class="form-control" asp-for="RequiredMessage" novalidate />
                             </div>
                             <div class="form-group">
                                 <label class="required" for="RegExValue">RegEx Value</label>
-                                <input type="text" class="form-control" asp-for="RegExValue" />
-                                <span asp-validation-for="RegExValue" class="text-danger"></span>
+                                <input type="text" class="form-control" asp-for="RegExValue" novalidate />
                             </div>
                             <div class="form-group">
                                 <label class="required" for="RegExMessage">RegEx Message</label>
-                                <input type="text" class="form-control" asp-for="RegExMessage" />
-                                <span asp-validation-for="RegExMessage" class="text-danger"></span>
+                                <input type="text" class="form-control" asp-for="RegExMessage" novalidate />
                             </div>
                             <input type="hidden" asp-for="FieldId" name="FieldId" />
                             <input type="hidden" value="@ViewBag.FormId" name="TemplateFormId" />
                         </div>
                         <div class="modal-footer">
-                            <button class="btn btn-success " type="submit"><span class="glyphicon glyphicon-floppy-saved"></span> Create</button>
+                            <button class="btn btn-success" type="submit"><span class="glyphicon glyphicon-floppy-saved"></span> Create</button>
                             <button type="button" class="btn btn-danger" data-dismiss="modal" id="btnFieldClose"> <span class="glyphicon glyphicon-remove"></span> Close</button>
                         </div>
                     </div>
@@ -113,7 +111,7 @@
     <script src="~/lib/jquery-validation-unobtrusive/jquery.unobtrusive-ajax.min.js"></script>
     <script src="~/lib/sweetalert/js/sweetalert2.all.min.js"></script>
     <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
-    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+    @*<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>*@
 
     <!-- Data tables js -->
     <script src="~/lib/datatables/js/jquery.dataTables.min.js"></script>
@@ -125,17 +123,44 @@
         $(document).ready(function () {
             bind();
 
+            $('#create-form').validate({
+                errorClass: 'error',
+                rules: {
+                    'Name': {
+                        required: true
+                    },
+                    'DefaultValue': {
+                        required: true
+                    }
+                },
+                messages: {
+                    'Name': {
+                        required: 'FieldName is required'
+                    },
+                    'DefaultValue': {
+                        required: 'DefaultValue is required'
+                    }
+                },
+                highlight: function (element) {
+                    $(element).children().addClass('error')
+                },
+                unhighlight: function (element) {
+                    $(element).children().removeClass('error')
+                }
+            });
+
             $('#btnFieldClose').click(function () {
                 clearFieldCreate();
             });
         });
 
         completedField = function (xhr) {
-            var rtn = JSON.parse(xhr.responseText);
-            if (rtn.error == false) {
+            var responseObject = JSON.parse(xhr.responseText);
+            debugger
+            if (!responseObject.error) {
                 Swal.fire({
                     title: 'Template Field',
-                    text: rtn.message,
+                    text: responseObject.message,
                     type: 'success',
                     allowOutsideClick: false
                 }).then(function () {
@@ -194,6 +219,8 @@
             var frm = document.getElementsByName('editfield')[0];
             frm.reset();
         }
+
+
         function bind() {
             $("#tbField").DataTable({
                 "processing": true, // for show progress bar
@@ -261,6 +288,12 @@
                 ]
             });
         }
+
+
+
+
+
+
 
         function editFieldProperty(id) {
             $.ajax({
