Field Options implemention

--- a/DynamicForm/Views/Fields/Index.cshtml
+++ b/DynamicForm/Views/Fields/Index.cshtml
@@ -100,6 +100,39 @@
 
         <div class="modal" id="update-field-model" role="dialog" aria-hidden="true" data-backdrop="static" data-keyboard="false" tabindex="-1">
         </div>
+        <div class="modal" id="option-field-model" role="dialog" aria-hidden="true" data-backdrop="static" data-keyboard="false" tabindex="-1">
+            <div class="modal-content">
+                <div class="modal-header bg-warning">
+                    <h4 class="modal-title">Add Field Options</h4>
+                    <button type="button" class="close" data-dismiss="modal" id="modelclose">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <div class="input-group control-group after-add-more">
+                        <input type="text" name="addmore[]" class="form-control control-options" placeholder="Enter Name Here">
+                        <div class="input-group-btn">
+                            <button class="btn btn-success add-more" type="button"><i class="glyphicon glyphicon-plus"></i> Add</button>
+                        </div>
+                    </div>
+
+                    <!-- Copy Fields -->
+                    <div class="copy hide">
+                        <div class="control-group input-group" style="margin-top:10px">
+                            <input type="text" name="addmore[]" class="form-control control-options" placeholder="Enter Name Here">
+                            <div class="input-group-btn">
+                                <button class="btn btn-danger remove" type="button"><i class="glyphicon glyphicon-remove"></i> Remove</button>
+                            </div>
+                        </div>
+                    </div>
+                    <input type="hidden" id="TemplateFormFieldId" />
+
+                </div>
+                <div class="modal-footer"> 
+                    <button class="btn btn-success" type="button" onclick="addFieldOptions()"><span class="glyphicon glyphicon-floppy-saved"></span> Create</button>
+                    <button type="button" class="btn btn-danger" data-dismiss="modal" id="btnFieldOptionsClose"> <span class="glyphicon glyphicon-remove"></span> Close</button>
+                </div>
+            </div>
+           
+        </div>
 
     </div>
 </div>
@@ -153,11 +186,9 @@
                 clearFieldCreate();
             });
         });
-
-        completedField = function (xhr) {
+         completedField = function (xhr) {
             var responseObject = JSON.parse(xhr.responseText);
-            debugger
-            if (!responseObject.error) {
+             if (!responseObject.error) {
                 Swal.fire({
                     title: 'Template Field',
                     text: responseObject.message,
@@ -277,22 +308,19 @@
                     {
                         'bSortable': false, "autoWidth": true,
                         "render": function (data, type, row) {
+                            var html = "";
                             if (row.status == 1) {
-                                return '<a type="button" data-toggle="modal" data-target="#update-field-model" class="btn btn-xs btn-success" onclick="editFieldProperty(\'' + row.id + '\')">Edit<a/> <a  type="button"  class="btn btn-xs btn-danger" title="Delete Field" onclick="deleteField(\'' + row.id + '\')">Delete</a> ';
+                                html += '<a type="button" data-toggle="modal" data-target="#update-field-model" class="btn btn-xs btn-success" onclick="editFieldProperty(\'' + row.id + '\')">Edit<a/> <a  type="button"  class="btn btn-xs btn-danger" title="Delete Field" onclick="deleteField(\'' + row.id + '\')">Delete</a> ';
+                                if (row.controlName == "Select") {
+                                    html += '<a type="button" data-toggle="modal" data-target="#option-field-model" class="btn btn-xs btn-info" onclick="optionFieldsModel(\'' + row.id + '\')">Options<a/>';
+                                }
                             }
-                            else {
-                                return "";
-                            }
+                            return html;
                         }
                     }
                 ]
             });
         }
-
-
-
-
-
 
 
         function editFieldProperty(id) {
@@ -306,6 +334,69 @@
             });
         }
 
+        function optionFieldsModel(id) {
+            $('#TemplateFormFieldId').val(id);
+        }
+
+        function addFieldOptions(){
+             var options = [];
+            $('.control-options').each(function () {
+                var val = $(this).val();
+                if (val != '' && val != null)
+                    options.push(val);
+            });
+            let formData = {
+                templateFormFieldId: $('#TemplateFormFieldId').val(),
+                optionValues: options, 
+            }
+             $.ajax({
+                url: '@Url.Action("SaveOptions", "FieldOptions")',
+                type: "POST",
+                data: formData,
+                success: function (response) { 
+                     if (!response.error) {
+                        Swal.fire({
+                            title: 'Form Field Options',
+                            text: response.message,
+                            type: 'success',
+                            allowOutsideClick: false
+                        }).then(function () { 
+                            location.reload();
+                        });
+                        $('#btnFieldOptionsClose').click();
+                        
+                    }
+                    else {
+                        Swal.fire({
+                            icon: 'error',
+                            title: 'Form Field Options',
+                            text: 'Oops!! Something Went Wrong!',
+                            type: 'error',
+                            allowOutsideClick: false
+                        });
+                    }
+                },
+                error: function (request, status, error) {
+                    Swal.fire({
+                        icon: 'error',
+                        title: 'Form Field Options',
+                        text: 'Oops!! Something Went Wrong!',
+                        type: 'error',
+                        allowOutsideClick: false
+                    });
+                }
+            });
+        }
+        $(".add-more").click(function () {
+            var html = $(".copy").html();
+            $(".after-add-more").after(html);
+        });
+
+
+        $("body").on("click", ".remove", function () {
+            $(this).parents(".control-group").remove();
+        }); 
+         
         function deleteField(id) {
             Swal.fire({
                 title: "Confirmation",
@@ -343,4 +434,4 @@
             });
         }
     </script>
-}
+    }
